# api/swagger/swagger.json
@@ -339,6 +339,13 @@
                         "description": "query the page size number",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "identifier of a department",
+                        "name": "instanceId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
