# internal/apiserver/interfaces/api/department.go
@@ -344,6 +344,7 @@ func (d *department) batchRemoveDepartmentMember(c *gin.Context) {
 //	@Description	List department members
 //	@Param			offset	query		int											false	"query the page number"
 //	@Param			limit	query		int											false	"query the page size number"
+//	@Param			instanceId	path		string	true	"identifier of a department"
 //	@Success		200		{object}	api.Response{data=v1.DepartmentMemberList}	"departments"
 //	@Router			/api/v1/departments/{instanceId}/member [get]
 //	@Security		BearerTokenAuth
